feat(webdriver): Implement window management